--- a/templates/result.html
+++ b/templates/result.html
@@ -41,7 +41,8 @@
    <h2>Больше всего вам подходит:</h2>
    <h1>{{ spec }}</h1>
    <h2>Навыки, которые вам пригодятся:</h2>
-   {{ skls }}
+   {{ skls }}<br><br><br><br>
+   <a href="/">Назад</a>
   </div>
    <div id="footer">Специально для <a href="https://moscityhack.innoagency.ru/">Moscow City Hack</a></div>
  </body>
